v8/tests/messages/property-call-miss.out
property-call-miss.js:2: Uncaught TypeError: Cannot call method 'foo' of null
function call_foo(obj) { return obj.foo(); }
                                    ^
